[fix] avatar spacing

--- a/src/styles/event.css
+++ b/src/styles/event.css
@@ -6,6 +6,7 @@
   float: left;
   /* margin-left: -20px; */
   margin-right: 3px;
+  margin-top: 2px;
 }
 .avatarlist {
   display: flow-root;
